--- a/Seleniumlevel1/pom.xml
+++ b/Seleniumlevel1/pom.xml
@@ -34,5 +34,16 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-remote-driver</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+
     </dependencies>
 </project>
